<resources>
    <string name="app_name">Beenanti</string>
    <string name="beenanti">
Beenanti
</string>

    <!--Lorem Ipsum-->
    <string name="lorem_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vehicula elementum neque vel accumsan. Aliquam tempor ligula ut tortor pharetra, non laoreet dui porta. Integer at tempus justo. Phasellus justo eros, pharetra in vehicula in, venenatis non dolor. Phasellus malesuada purus quis eros scelerisque fermentum.</string>

    <!-- strings.xml -->
    <string name="beenanti_title">Beenanti</string>
    <string name="membina_dan">Membina dan Memberdayakan</string>
    <string name="btn_mulai">Memulai</string>
    <string name="anda_belum_lg"><i>Anda belum login</i></string>

    <string name="welcome_use">Welcome, User!</string>
    <string name="haraustay">Beenanti</string>
    <string name="bina_panti">Bina Panti</string>
    <string name="sudah_punya">Sudah punya akun?\n<u>Masuk</u></string>
    <string name="email_hint">Email</string>
    <string name="email_example">Contoh: beenanti@email.com</string>
    <string name="full_name_hint">Nama Lengkap</string>
    <string name="password_hint">Password</string>
    <string name="password_minimum_character">Minimal 6 karakter</string>
    <string name="password_confirmation_hint">Konfirmasi password</string>
    <string name="register">Registrasi</string>
    <string name="register_title">Pendaftaran</string>
    <string name="register_body">Untuk dapat menikmati semua fitur pada Beenanti, silahkan daftarkan data Anda terlebih dahulu.</string>
    <string name="tos_agreement">Dengan melanjutkan, Anda menyetujui Persyaratan Layanan dan Kebijakan Privasi Kami</string>
    <string name="to_login">Saya sudah memiliki akun</string>
    <string name="login_title">Masuk</string>
    <string name="login_body">Selamat datang kembali!</string>
    <string name="login_button">Masuk</string>
    <string name="to_register">Belum mempunyai akun? Daftar sekarang disini!</string>
    <string name="panti_detail">Detail Panti Asuhan</string>
    <string name="other_menu">Menu lainnya</string>
    <string name="donate_label">Donasi</string>
    <string name="karya_label">Karya</string>
    <string name="visits_label">Kunjungan</string>
    <string name="volunteer_label">Relawan</string>
    <string name="profile_label">Profil</string>
    <string name="phone_number_label">No. HP</string>
    <string name="instagram_label">Instagram</string>
    <string name="total_children_label">Jumlah Anak</string>
    <string name="pic_label">Pengelola</string>
    <string name="needs_label">Kebutuhan</string>
    <string name="sandang_label">Sandang</string>
    <string name="pangan_label">Pangan</string>
    <string name="papan_label">Papan</string>
    <string name="welcome_home">Selamat datang,</string>
    <string name="address_dummy">Limau Manis, Pauh, Padang City, West Sumatra 25175 Indonesia, Earth Solar System</string>
    <string name="total_children"> 50 anak</string>
    <string name="contentDesc_panti_photo">Foto Panti Asuhan</string>
    <string name="home_panti_title">Title test: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nearby_panti_title">Panti Terdekat</string>
    <string name="freq_update_panti_title">Panti Terupdate</string>
    <string name="total_children_panti_title">Banyak Anak di Panti</string>

    <!--    Parameter String-->
    <string name="total_children_card">%1$s anak</string>
</resources>