<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantidetailscreen.PantiDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/detailPantiAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:menu="@menu/detail_menu"
            app:navigationIcon="@drawable/ic_kembali"
            app:title="@string/panti_detail"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/panti_img_slider"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="24dp"
                app:iss_auto_cycle="true"
                app:iss_corner_radius="16"
                app:iss_delay="0"
                app:iss_period="5000"
                app:iss_placeholder="@drawable/logo_beenanti" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/panti_name"
                    style="@style/heading3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="Panti Asuhan Nurul Hikmah" />

                <TextView
                    android:id="@+id/panti_distance"
                    style="@style/paragraph1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5.3km" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/panti_location"
                    style="@style/paragraph1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="0.8"
                    android:text="Limau Manis, Pauh, Padang City, West Sumatra 25175 Indonesia, Earth Solar System" />

            </LinearLayout>

            <!--Donate and Other Action Section-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/donasi" />

                    <TextView
                        style="@style/heading4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/donate_label" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/karya" />

                    <TextView
                        style="@style/heading4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/karya_label" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/kunjungan" />


                    <TextView
                        style="@style/heading4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/visits_label" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/relawan" />

                    <TextView
                        style="@style/heading4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/volunteer_label" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_email_24" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/email_hint" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": nurulhikmah_panti@gmail.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_phone_enabled_24" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/phone_number_label" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": +62 812-3456-0014" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_instagram" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/instagram_label" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": @panti.nurulhikmah" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_emoji_people_24" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/total_children_label" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": 50 anak" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_baseline_person_24" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/pic_label" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": Ibu Aisyah Nuryanti Hikmah" />
            </LinearLayout>

            <TextView
                style="@style/heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/needs_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/pangan_label" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": Beras, telur, penyedap makanan" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/sandang_label" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=": Mukena, baju sekolah" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center">

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/papan_label" />

                <TextView
                    style="@style/paragraph1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_paragraph" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>