<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/panti_card"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="0dp"
    app:strokeColor="@color/lighter_gray"
    app:strokeWidth="0.3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/panti_card_image"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/contentDesc_panti_photo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/deletesoon_pexels_agung_pandit_wiguna_3401403" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/panti_card_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/beenanti_title"
                android:textAppearance="@style/heading3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/panti_card_location"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/address_dummy"
                    android:textAppearance="@style/paragraph1"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_baseline_emoji_people_24" />

                <TextView
                    android:id="@+id/panti_card_childrens"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="@string/total_children"
                    android:textAppearance="@style/paragraph1" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>